fixed more warnings #38