@@ -3,9 +3,7 @@ package fluent.ly;
 import static org.junit.Assert.*;
 
 import java.util.*;
-
 import org.junit.*;
-
 import fluent.ly.nil.*;
 
 public class nilTest {
@@ -23,8 +21,8 @@ public class nilTest {
   @SuppressWarnings("static-method") @Test public  void testGuardingly() {
     On<Integer, String> ff = nil.guardingly(nilTest::helperF);
     assertNull(ff.on(null));
-    assertNotNull(ff.on(new Integer(1)));
-    assertEquals("1", ff.on(new Integer(1)));
+    assertNotNull(ff.on(Integer.valueOf(1)));
+    assertEquals("1", ff.on(Integer.valueOf(1)));
   }
 
   @SuppressWarnings("static-method") @Test public  void testIgnoringBoolean() {
